# Learning

./: .gitignore
Algo_design/: binom.c  graph_traversal.c  insertion_sort.cpp
Bash_script/: arithmetic_ops_b.sh  array_b.sh  case_b.sh  cmd_line_args_b.sh  concat_str_b.sh  date_b.sh  echo_b.sh  elif_b.sh  euclid_algo.sh  eval_b.sh  file_exist_b.sh  for_loop_b.sh  func_b.sh  if_b.sh  is_file_dir_b.sh  is_file_readable_b.sh  is_variable_set_b.sh  log_file.txt  read_file_lines_b.sh  read_passwd_b.sh  read_to_file_b.sh  sed_b.sh  sed_content.txt  sl_b.sh  sleep_b.sh  split_str_b.sh  str_equal_b.sh  str_len_b.sh  substring_b.sh  tick_tick.sh  try_file.sh  until_loop_b.sh  user_input_b.sh  variable_b.sh  while_b.sh  write_to_file_b.sh
Basler/: CMakeLists.txt  test.cpp
Boost/: CMakeLists.txt  parallel.cpp  path.cpp  run_odd_even.cpp
C/: exec.sh  listOfString  listOfString.c  main.cpp  myType.h  ptr.cpp  test  test.c
Cpp/: 6-9-a1  6-9-q1  (+75 more)
OpenCV/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  blend_imgs.cpp  calcHist_Demo  calcHist_Demo.cpp  cmake_install.cmake  conv2gray.cpp  edge_detection.cpp  eyes-detection.cpp  find_contour.py  find_n_draw_contour  find_n_draw_contour.cpp  fourier_transform  fourier_transform.cpp  hcircle_trsf.cpp  hough-circle.cpp  main.cpp  min_max-filter.cpp  motion-filter.cpp  prevMakefile  pupil-detection  pupil-detection-note.md  pupil-detection.cpp  pupil_test  readimg.cpp  remove-background.cpp  slider_mouse-opcv.cpp  spectral_density.py  timing.cpp  tryCvMat.cpp  tryVideo.cpp  ui.cpp
OpenCV/OpenCVpy/: grayimg.py  kernel.py
OpenCV/Presentation01/: 71_mask.cpp  72_mask.cpp  73_resize.cpp  75_gaussian_pyramid.cpp  76_saliency_map.cpp  77_78_gabor_filter.cpp  79_gabor_edge_detection.cpp  80_gabor_feature_extraction.cpp  gaborLib.hpp  make.py  mask01  mask01.cpp  mask02  mask02.cpp  matrix.cpp  motion-filter.cpp  myFunc.hpp  prototype.cpp  pyramid_highfreq.cpp  resize.cpp  sobel.cpp  zoom.cpp
(+19 files in other folders)
