cmake_minimum_required(VERSION 3.0)
file(GLOB files "*.cpp")
FIND_PACKAGE(OpenCV 4.0.0 REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIB_DIR})
foreach(file ${files})
    get_filename_component(binary_name ${file} NAME_WE)
    add_executable(${binary_name} ${file})
    target_link_libraries(${binary_name} ${OpenCV_LIBS})
endforeach()
